finish cart [work on payment now]

--- a/src/app/components/pages/shop/cart/cart.component.html
+++ b/src/app/components/pages/shop/cart/cart.component.html
@@ -79,7 +79,7 @@
                         <p class="part-title">Total</p>
                         <p class="value">${{total}}</p>
                     </div>
-                    <button class="checkout-button">Proceed To CheckOut</button>
+                    <button class="checkout-button" (click)="verifyCheckout()">Proceed To CheckOut</button>
                 </div>
             </div>
 
