--- a/src/app/components/pages/shop/product-details/product-details.component.html
+++ b/src/app/components/pages/shop/product-details/product-details.component.html
@@ -1,4 +1,8 @@
 <app-background></app-background>
+<app-stars-background></app-stars-background>
+<app-stars-background [top]="80"></app-stars-background>
+<app-lines-background></app-lines-background>
+<app-lines-background [top]="80"></app-lines-background>
 
 <!-- <div class="background-lines">
     <div class="background"><img src="images/shopping/background.png" alt="background"></div>
