auth with google

--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="another-account mt-3 text-center">
           <div class="defualt-account d-flex justify-content-center gap-3">
-            <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
+            <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2" (click)="loginWithGoogle()">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google"
                 style="width: 24px; height: 24px;">
               Login with Google
