--- a/src/app/components/account/login/login.component.css
+++ b/src/app/components/account/login/login.component.css
@@ -11,9 +11,14 @@ body {
   left: 50%;
   /* width: 70%; */
   margin-top: 30px;
-
+  /* width: 100%; */
 }
 
+
+/* *{
+  border: red 1px solid;
+
+} */
 .logo {
   margin-top: 10px;
   position: relative;
@@ -74,7 +79,7 @@ body {
   position: absolute;
   bottom: 3%;
   color: #fff;
-  font-size: 18px;
+  font-size: clamp(0.8rem, 1.1vw, 1.1rem);
   font-weight: 900;
 
 }
@@ -88,13 +93,13 @@ input {
   border-radius: 16px;
   border: black 1px solid;
   background-color: #F1F1F1BF;
-  font-size: 20px;
+  font-size: clamp(0.8rem, 1.2vw, 1.2rem);
 }
 
 .btn-create {
   border-radius: 11px;
   font-family: 'Comic Sans MS', cursive, sans-serif;
-  font-size: 22px;
+  font-size: clamp(0.8rem, 1.3vw, 1.3rem);
   font-weight: 700;
 
 }
@@ -102,7 +107,7 @@ input {
 .defualt-account .btn {
   width: 500px;
   font-family: 'Comic Sans MS', cursive, sans-serif;
-  font-size: 18px;
+  font-size: clamp(0.8rem, 1.1vw, 1.1rem);
   padding: 10px;
   border-radius: 15px;
   background-color: #F1F1F1BF;
@@ -222,6 +227,23 @@ input {
   background: white;
   border-radius: 50%;
   padding: 6px;
-  font-size: 18px;
+  font-size: clamp(0.8rem, 1.1vw, 1.1rem);
   color: #FF006E;
 }
+
+
+
+/* resposive */
+
+/* mobile */
+@media (max-width: 480px) {
+
+}
+
+/* tablet */
+@media (min-width: 481px) and (max-width: 968px) {
+
+}
+
+/* laptob */
+@media (min-width: 769px) {}
