--- a/src/app/components/account/signup/signup.component.css
+++ b/src/app/components/account/signup/signup.component.css
@@ -1,17 +1,21 @@
 body {
   margin: 0;
-  height: 100vh; 
+  height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
+
 }
+
+/*  */
 
 .container {
   position: absolute;
   top: 50%;
-  left: 50%; 
-  transform: translate(-50%, -50%); 
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 .logo {
   position: relative;
   transform: translateX(-50%);
