enhance category card

--- a/src/app/components/pages/home/categories/categories.component.html
+++ b/src/app/components/pages/home/categories/categories.component.html
@@ -8,27 +8,27 @@
   <!-- // Category Card for Learning Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#FF006E'" [bgIcon]="'images/learningCorenetCategory.png'"
       [mainIcon]="'images/mainlearningCorenetCategory.png'" [title]="'Learning\nCorner'"
-      (cardClick)="onCardClicked('Learning\nCorner')"></app-category-card></div>
+      (cardClick)="onCardClicked('learningCorner')"></app-category-card></div>
 
 
 
   <!-- Category Card for shopping Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#9B57FA'" [bgIcon]="'images/shoppingCorenerCategory.png'"
       [mainIcon]="'images/mainShoppingCorenerCategory.png'" [title]="'Shopping\nCorner'"
-      (cardClick)="onCardClicked('Shopping\nCorner')"></app-category-card></div>
+      (cardClick)="onCardClicked('shoppingCorner')"></app-category-card></div>
 
 
   <!-- Category Card for shopping Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#FB5664'" [bgIcon]="'images/storyCorenerCategory.png'"
       [mainIcon]="'images/mainStoryCorenerCategory.png'" [title]="'Stories\nCorner'"
-      (cardClick)="onCardClicked('story\nCorner')"></app-category-card></div>
+      (cardClick)="onCardClicked('storyCorner')"></app-category-card></div>
 
 
 
       <!-- Category Card for shopping Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#6486FF'" [bgIcon]="'images/gameCorenerCategory.png'"
       [mainIcon]="'images/mainGameCorenerCategory.png'" [title]="'Games\nCorner'"
-      (cardClick)="onCardClicked('game\nCorner')"></app-category-card></div>
+      (cardClick)="onCardClicked('gamesCorner')"></app-category-card></div>
 
 
 
