--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -3,7 +3,7 @@
 <div class="hero row align-items-center justify-content-center gap-0">
     <!-- Left Side -->
     <div class="col-12 col-md-8 d-flex flex-column">
-        <div class="welcome mb-3">
+        <div class="welcome mb-3 d-flex ">
             <div class="welcome-img mb-2">
                 <img src="images/welcome.png" alt="welcome">
             </div>
