--- a/src/app/components/pages/home/categories/category-card/category-card.component.css
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.css
@@ -31,8 +31,8 @@
   right: 0;
   width: 85%;
   height: 85%;
-  opacity: 0.35;
-  filter: brightness(1.1) contrast(1.1);
+  /* opacity: 0.35; */
+  filter: brightness(11) contrast(11);
   z-index: 0; 
 }
 
