--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -45,7 +45,7 @@ body {
 } */
 
 .welcome-img img {
-    width: 40px;
+    width: 50%;
     height: auto;
     animation: spin 5s linear infinite;
 
