--- a/src/app/components/pages/home/home-games/home-games.component.html
+++ b/src/app/components/pages/home/home-games/home-games.component.html
@@ -1,6 +1,7 @@
 <app-stars-background></app-stars-background>
 <div class="super">
 
+    <div class="paper-plane"><img src="images/paperPlane.png" alt=""></div>
     <h1 class="games-title">Patarif’s Games</h1>
     
 <!-- <img src="images/paperPlane.png" alt="" style="position: absolute; right: -33%; top: 60%; transform: translateY(-50%) rotate(-50deg) scaleX(-1); z-index: -2;"> -->
