--- a/src/app/components/pages/home/categories/category-card/category-card.component.css
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.css
@@ -32,7 +32,7 @@
   width: 85%;
   height: 85%;
   /* opacity: 0.35; */
-  filter: brightness(11) contrast(11);
+  /* filter: brightness(0.2) contrast(1.1); */
   z-index: 0; 
 }
 
