--- a/src/app/components/game-template/game-template.component.css
+++ b/src/app/components/game-template/game-template.component.css
@@ -44,7 +44,12 @@ height: 100%;
   overflow: auto;
 
 }
+.game-card.no-bg {
+  background: none !important;
+  background-image: none !important;
+  box-shadow:none !important;
 
+}
 .game-card.fullscreen-active {
   width: 98vw !important;
   max-width: 98vw !important;
@@ -75,7 +80,11 @@ height: 100%;
   justify-content: space-between;
   width: 100%;
   min-height: 320px;
-  gap: 10px;
+  gap: 5px;
+  border-radius: 1rem;
+overflow: auto;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
 }
 
 .top-icons {
@@ -158,7 +167,26 @@ height: 100%;
   transform: scale(0.95);
 }
 
-
+@media screen and (max-width: 480px) {
+  .game-bg{
+    width: 100%;
+  }
+  .icon-btn {
+    font-size: 1.5rem;
+    padding: 8px 16px;
+  }
+  .icon-btn i {
+    font-size: 1.5rem;
+  }
+  .material-icons:not(.exit .material-icons) {
+    font-size: 1.2rem;
+    padding: 8px;
+  }
+  .exit .material-icons {
+    font-size: 1.2rem;
+    padding: 8px;
+  }
+}
 
 
 
