--- a/src/app/components/game-template/game-template.component.html
+++ b/src/app/components/game-template/game-template.component.html
@@ -1,5 +1,5 @@
 <div class="game-bg">
-  <div class="top-icons">
+  <div class="top-icons px-3">
    <div class="btns">
     <button class="icon-btn" (click)="toggleFullScreen()">
       <img src="/images/fullscreen.svg" />
@@ -15,11 +15,21 @@
       <img src="/images/close.svg" width="24" height="24"/>
     </button>
   </div>
-  <div class="game-card" #gameCard>
+  <div class="game-card p-4" 
+  #gameCard
+  [class.no-bg]="noCardBackground">
 
-
+    <app-game-header *ngIf="shouldShowGameHeader()"
+      [level]="level"
+      [questionsCorrectInLevel]="questionsCorrectInLevel || 0"
+      [timeElapsed]="timeElapsed || 0"
+      [currentWord]="currentWord || ''"
+      [bonusPoints]="bonusPoints || 0"
+      [difficulty]="difficulty || 'easy'"
+    ></app-game-header>
 
     <div class="game-content">
+
       <ng-content></ng-content>
     </div>
 
