--- a/src/app/components/pages/shop/product-details/product-details.component.html
+++ b/src/app/components/pages/shop/product-details/product-details.component.html
@@ -26,7 +26,7 @@
                 <!-- main image -->
                 <div class="main-img">
                     <div class="collection">
-                        <button class="add-to-favourite" (click)="isFavourite = !isFavourite">
+                        <button class="add-to-favourite" (click)="addToFav()">
                             <i class="bi" [ngClass]="isFavourite ? 'bi-heart-fill' : 'bi-heart'"></i>
                         </button>
                         <!-- <div *ngIf="!isProductStockAvailable" class="is-available">salled</div> -->
