--- a/src/app/components/account/login/login.component.css
+++ b/src/app/components/account/login/login.component.css
@@ -85,7 +85,8 @@ body {
 }
 
 .account-header {
-  font-family: 'Satoshi Variable', sans-serif;
+  font-family: 'Baloo 2';
+  font-size: 3rem;
 }
 
 input {
@@ -94,6 +95,7 @@ input {
   border: black 1px solid;
   background-color: #F1F1F1BF;
   font-size: clamp(0.8rem, 1.2vw, 1.2rem);
+  padding: 12px;
 }
 
 .btn-create {
@@ -101,9 +103,14 @@ input {
   font-family: 'Comic Sans MS', cursive, sans-serif;
   font-size: clamp(0.8rem, 1.3vw, 1.3rem);
   font-weight: 700;
+  padding: 12px;
 
 }
-
+form .btn span{
+  font-family: 'Baloo 2';
+  font-weight: 700;
+  font-size: 1.3rem;
+}
 .defualt-account .btn {
   width: 500px;
   font-family: 'Comic Sans MS', cursive, sans-serif;
