--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -231,15 +231,15 @@
 
 .side-menu {
   position: fixed;
-  top: 0;
-  left: -260px;
+  left: 0;
+  top: -100vh;
   /* برة الشاشة */
-  width: 260px;
-  height: 100vh;
-  background: linear-gradient(180deg, var(--pink), var(--orane));
+  width: 100vw;
+  height: 60vh;
+  background: white;
   box-shadow: 2px 0 15px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  transition: left 0.3s ease;
+  padding: 40px 20px 20px 20px;
+  transition: top 0.3s ease;
   z-index: 2000;
   border-radius: 30px;
   display: flex;
@@ -247,11 +247,11 @@
   justify-content: center;
   /* يخلي العناصر في النص */
   align-items: center;
+
 }
 
 .side-menu.open {
-  left: 0;
-  /* يدخل من الجنب */
+  top: 0;
 }
 
 .side-menu .close-btn {
@@ -272,10 +272,10 @@
 }
 
 .side-menu li {
-  margin: 15px 0;
+  margin: 30px 0;
   border-radius: 24px;
   padding: 12px 0;
-  background: rgba(255, 255, 255, 0.479);
+  background: rgba(255, 106, 106, 0.116);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -289,7 +289,7 @@
 .side-menu a {
   display: block;
   text-decoration: none;
-  color: #ffffff;
+  color: var(--pink);
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -301,3 +301,5 @@
   cursor: pointer;
   margin-left: 30px;
 }
+
+
